--- a/templates/default/list_reverse_zones.html
+++ b/templates/default/list_reverse_zones.html
@@ -120,6 +120,9 @@
                             </a>
                             {{ zone_sort_by == 'owner' ? (zone_sort_direction == 'ASC' ? '<i class="bi bi-arrow-down"></i>' : '<i class="bi bi-arrow-up"></i>') : '' }}
                         </th>
+                        {% if iface_zonelist_fullname %}
+                        <th>{% trans %}Full name{% endtrans %}</th>
+                        {% endif %}
                         <th>{% trans %}Associated Forward Zones{% endtrans %}</th>
 
                         {% if iface_zonelist_serial %}
@@ -164,6 +167,13 @@
                             {{ owner }}<br>
                             {% endfor %}
                         </td>
+                        {% if iface_zonelist_fullname %}
+                        <td>
+                            {% for full_name in zone['full_names'] %}
+                            {{ full_name }}<br>
+                            {% endfor %}
+                        </td>
+                        {% endif %}
                         <td>
                             {% if associated_forward_zones[zone.id] is defined and associated_forward_zones[zone.id]|length > 0 %}
                                 {% for forward in associated_forward_zones[zone.id] %}
@@ -175,7 +185,7 @@
                                     </span><br>
                                 {% endfor %}
                             {% else %}
-                                <span class="text-muted">{% trans %}No linked forward zones{% endtrans %}</span>
+                                <span class="text-muted">{% trans %}-{% endtrans %}</span>
                             {% endif %}
                         </td>
 
@@ -187,6 +197,8 @@
                         <td>
                             {% if zone["template"] %}
                             <span class="badge bg-primary text-white">{{ zone["template"] }}</span>
+                            {% else %}
+                            -
                             {% endif %}
                         </td>
                         {% endif %}
@@ -210,12 +222,10 @@
                                 {% endif %}
                                 <a class="btn btn-outline-primary btn-sm" href="index.php?page=edit&id={{ zone['id'] }}" data-testid="edit-zone-{{ zone['id'] }}">
                                     <i class="bi bi-pencil-square text-primary"></i>
-                                    <span class="d-none d-md-inline">{% trans %}Edit{% endtrans %}</span>
                                 </a>
                                 {% if perm_edit == "all" or (perm_edit == "own" and user_is_zone_owner) %}
                                 <a class="btn btn-outline-danger btn-sm" href="index.php?page=delete_domain&id={{ zone['id'] }}" data-testid="delete-zone-{{ zone['id'] }}">
                                     <i class="bi bi-trash text-danger"></i>
-                                    <span class="d-none d-md-inline">{% trans %}Delete{% endtrans %}</span>
                                 </a>
                                 {% endif %}
                             </div>
