--- a/templates/default/list_template_zones.html
+++ b/templates/default/list_template_zones.html
@@ -99,7 +99,7 @@
                         <div class="gap-2">
                             <a class="btn btn-sm btn-outline-primary"
                                href="index.php?page=edit&id={{ zone.id }}">
-                                <i class="bi bi-pencil-square text-primary"></i> <span class="d-none d-md-inline text-primary">{% trans %}Edit{% endtrans %}</span>
+                                <i class="bi bi-pencil-square text-primary"></i>
                             </a>
                         </div>
                     </td>
